# django-blog

./: .env_example  .gitignore  Dockerfile  Dockerfile.celery  README.md  ckeditor_req.txt  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  uwsgi.ini
blog/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_article_alter_post_title.py  0002_initial.py  0003_alter_post_options_post_epigraph_alter_post_author.py  0004_alter_post_options.py  0005_alter_post_slug.py  0006_post_is_draft_alter_post_is_published.py
blog/templates/blog/: addpost.html  base.html  edit_post.html  index.html  navigation_menu.html  register.html  single-post.html  single_post.html  unpublished_posts.html
blog/templatetags/: blog_tags.py
celery/: Dockerfile
comments/: admin.py  forms.py  models.py  tests.py
comments/migrations/: 0001_initial.py
neuron/: settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
project/: .env_example  Dockerfile  example_fixture.json  manage.py
project/blog/: forms.py  mixins.py  models.py  redis_services.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
project/blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_is_draft.py  0004_post_is_pinned.py
project/blog/templatetags/: blog_tags.py
project/comments/: admin.py  forms.py  models.py  tests.py
project/comments/migrations/: 0001_initial.py  0002_alter_comment_content.py  0002_initial.py
project/neuron/: asgi.py  celery.py  ckeditor_config.py  settings.py  urls.py
project/users/: admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
project/users/migrations/: 0001_initial.py  0002_customuser_is_banned_alter_customuser_is_active.py  0003_alter_customuser_is_active.py  0004_alter_customuser_is_active.py
project/users/templatetags/: users_tags.py
users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_photo.py  0003_alter_customuser_photo.py  0004_alter_customuser_photo.py
users/templates/users/: auth_menu.html  author_posts.html  login.html  profile_edit.html  register.html
users/templatetags/: users_tags.py
(+42 files in other folders)
